fix: Amambay and euro gatherers
Signed-off-by: Arturo Volpe <arturovolpe@gmail.com>